# win-grpc

./: CMakeLists.txt  delete-generated.ps1
.github/workflows/: build.yaml
cmake/: clang-format.cmake
docs/: development.md
examples/helloworld/: CMakeLists.txt  client_main.cpp  client_stub.hpp  helloworld_grpc_generated.cpp  helloworld_grpc_generated.hpp  helloworld_impl.hpp  main.cpp
generator/: CMakeLists.txt  win_cpp_plugin.cpp  win_cpp_plugin.hpp  win_grpc_client_generator.cpp  win_grpc_client_generator.hpp  win_grpc_generator.cpp  win_grpc_generator.hpp  win_grpc_genrator_common.hpp
include/boost/wingrpc/: wingrpc.hpp  wingrpc_client.hpp  wingrpc_common.hpp
